--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: TrackIBS
 github_username: TrackIBS
+reddit_username: TrackIBS
 
 # Build settings
 markdown: kramdown
